--- a/DBT_Init_1/dbt_project.yml
+++ b/DBT_Init_1/dbt_project.yml
@@ -2,11 +2,11 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'DBT_Init_1'
+name: 'dbt_init_1'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'DBT_Init_1'
+profile: 'dbt_init_1'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -35,3 +35,4 @@ models:
             # Config indicated by + and applies to all files under models/example/
       dim:
         +materialized: table
+        
