Creating all fact_tables

--- a/DBT_Init_1/dbt_project.yml
+++ b/DBT_Init_1/dbt_project.yml
@@ -35,4 +35,7 @@ models:
             # Config indicated by + and applies to all files under models/example/
       dim:
         +materialized: table
+        fact:
+          +materialized: incremental
+          +schema: facts
         
