--- a/DBT_Init_1/dbt_project.yml
+++ b/DBT_Init_1/dbt_project.yml
@@ -29,13 +29,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  DBT_Init_1:
+  dbt_init_1:
     example:
       +materialized: view
             # Config indicated by + and applies to all files under models/example/
       dim:
         +materialized: table
-        fact:
-          +materialized: incremental
-          +schema: facts
-        
+      facts:
+        +materialized: incremental
